force-app/main/default/objects/Interviews__c/Interviews__c.object-meta.xml
<CustomObject>
    <label>Interviews</label>
    <nameField>
        <displayFormat>INTER-{0000}</displayFormat>
        <label>Interviews No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>