force-app/main/default/objects/Interviews__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <formula>Job_Application__r.Candidate__r.First_Name__c +  &apos; &apos; + Job_Application__r.Candidate__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate</label>
    <type>Text</type>
</CustomField>