force-app/main/default/objects/Interviews__c/fields/Interview_Round__c.field-meta.xml
<CustomField>
    <fullName>Interview_Round__c</fullName>
    <label>Interview Round</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>