force-app/main/default/objects/Interviews__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>In_Progress</fullName>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Selected</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
                <isActive>false</isActive>
                <label>In progress</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>