force-app/main/default/objects/Interviews__c/validationRules/Interview_Round_Should_Not_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Interview_Round_Should_Not_Update</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   NOT(ISNEW()),
   ISCHANGED( Interview_Round__c )
)</errorConditionFormula>
    <errorDisplayField>Interview_Round__c</errorDisplayField>
    <errorMessage>Interview Round field cannot be updated</errorMessage>
</ValidationRule>