force-app/main/default/objects/Interviews__c/listViews/All_Interviews.listView-meta.xml
<ListView>
    <fullName>All_Interviews</fullName>
    <columns>NAME</columns>
    <columns>Job_Application__c</columns>
    <columns>Candidate__c</columns>
    <columns>Interview_Round__c</columns>
    <columns>Status__c</columns>
    <columns>Feedback__c</columns>
    <columns>Interview_Date_Time__c</columns>
    <columns>Interviewer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Interviews</label>
</ListView>